fix: centered logo view and line spacing between line and title

--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -24,6 +24,7 @@ $breakpoint-xl: 1200px;
     h5 {
       border-bottom: 1px solid white;
       font-size: 1.2rem;
+      padding-bottom: 5px;
     }
 
     .block {
@@ -45,8 +46,6 @@ $breakpoint-xl: 1200px;
     }
   }
 
-  align-items: center;
-
   .gap-2 {
     gap: 0.5rem;
   }
@@ -62,4 +61,10 @@ $breakpoint-xl: 1200px;
   .bg-footer section .col-xl-3 {
     min-width: 100%;
   }
+}
+
+.center{
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
